feat: Modernize language constructs
Signed-off-by: Łukasz Jernaś <lukasz.jernas@allegro.com>